<resources>
    <string name="app_name">Pons</string>
    <string name="action_settings">Settings</string>

    <string name="welcome">Bienvenido</string>
    <string name="last_welcome">A dónde vamos?</string>

    <string name="menu_item_money">Segun mi bolsillo</string>
    <string name="menu_item_location">Mapa</string>
    <string name="menu_item_make">Que te gustaría hacer?</string>
    <string name="menu_item_help_me">Te sugiero algunos lugares!</string>
    <string name="menu_item_place">Encontrar lugares?</string>
    <string name="menu_item_more_info">Mas información</string>
    <string name="text_message_unlimited">Sin limite de precio!</string>
    <string name="text_message_upper_100">Mas de 100 Bs!</string>
    <string name="text_message_20">Tengo 20 Bs!</string>
    <string name="text_message_50">Tengo 50 Bs!</string>
    <string name="title_place">Titulo de Lugar</string>
    <string name="phone_place">444444</string>
    <string name="address_place">av. America entre c. Junin y c. Pedro</string>
    <string name="about_link"><a href='http://www.pons.bo'>http://www.ponseventos.com</a></string>
    <string name="web_in_about">Si deseas saber mas o publicitar en Pons, entra a nuestra página web</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_simple_fragment_pager_adapter">SimpleFragmentPagerAdapter</string>
    <string name="title_activity_sample_fragment_pager_adapter">SampleFragmentPagerAdapter</string>
    <string name="title_activity_eventos">Eventos</string>

</resources>
