<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_place"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardElevation="@dimen/elevation_cards"
    card_view:cardCornerRadius="@dimen/corner_radius_cards"
    android:layout_width="match_parent"
    card_view:cardUseCompatPadding="true"
    android:layout_height="@dimen/size_cell">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="1"
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tv_title_place"
                    android:text="@string/title_place"
                    android:textSize="@dimen/size_card_place_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_phone_place"
                    android:text="@string/phone_place"
                    android:textSize="@dimen/size_card_place_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_address_place"
                    android:text="@string/address_place"
                    android:textSize="@dimen/size_card_place_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_weight="2"
                android:padding="@dimen/padding_card_place_actions"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_icon_place_facebook"
                    android:src="@mipmap/ic_facebook_gray_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/iv_icon_place_web"
                    android:paddingLeft="@dimen/padding_card_place_between_actions"
                    android:src="@mipmap/ic_globe_gray_24dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/iv_icon_place"
                android:src="@drawable/millajta_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>