<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.miguel.angelcalderon.MainActivity_">

    <LinearLayout
        android:id="@+id/fab_menu_make"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#885F7F"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center|bottom"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/heart"
                android:layout_width="56dp"
                android:layout_height="56dp" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textStyle="bold"
                android:textSize="27sp"
                android:textColor="@android:color/white"
                android:text="@string/menu_item_make"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fab_menu_money"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#DA5E60"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center|bottom"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/coin"
                android:layout_width="56dp"
                android:layout_height="56dp" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textStyle="bold"
                android:textSize="27sp"
                android:textColor="@android:color/white"
                android:text="@string/menu_item_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fab_menu_location"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#13B0A5"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center|bottom"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/bullhorn"
                android:layout_width="56dp"
                android:layout_height="56dp" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textStyle="bold"
                android:textSize="27sp"
                android:textColor="@android:color/white"
                android:text="@string/menu_item_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fab_menu_help_me"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="#D0C490"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center|bottom"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/avatar"
                android:layout_width="56dp"
                android:layout_height="56dp" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textStyle="bold"
                android:textSize="27sp"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/menu_item_help_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
<!--<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    tools:context="com.miguel.angelcalderon.MainActivity_">

    <ImageView
        android:background="@drawable/background_main"
        android:layout_width="match_parent"
        android:scaleType="fitXY"
        android:layout_height="match_parent" />

    <TextView
        android:paddingTop="@dimen/size_cell"
        android:id="@+id/tv_title_welcome"
        android:gravity="center_horizontal"
        android:text="@string/welcome"
        android:textColor="@color/second_text"
        android:textSize="@dimen/title_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:gravity="center_horizontal"
        android:text="@string/last_welcome"
        android:textColor="@color/second_text"
        android:textSize="@dimen/title_main"
        android:layout_below="@id/tv_title_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        fab:menu_icon="@mipmap/ic_star"
        fab:menu_animationDelayPerItem="0"
        fab:menu_colorNormal="#43A047"
        fab:menu_colorPressed="#2E7D32"
        fab:menu_colorRipple="#1B5E20"
        fab:menu_labels_maxLines="2"
        fab:menu_labels_ellipsize="end">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_menu_money"
            android:src="@mipmap/ic_attach_money_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/menu_item_money"
            style="@style/MenuButtonsSmall.Green" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_menu_location"
            android:src="@mipmap/ic_location_on_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/menu_item_place"
            style="@style/MenuButtonsSmall.Green" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_menu_make"
            android:src="@mipmap/ic_format_quote_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/menu_item_make"
            style="@style/MenuButtonsSmall.Green" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_menu_help_me"
            android:src="@mipmap/ic_play_arrow_white_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_label="@string/menu_item_help_me"
            style="@style/MenuButtonsSmall.Green" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>-->
